--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <title>PWA</title>
   </head>
   <body>
-    <h1>Hello, PWA world!</h1>
+    <h1>gitTestHello, PWA world!</h1>
     <button onclick="notify()">通知を送信</button>
   </body>
 </html>
