--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <button onclick="notify()">通知を送信</button>
     
      <div id="button"></div>
+     <button type="button" onclick="location.href='./config.html'">設定</button>
      <br>
      日曜日
      <select name="youbi" id="week">
