--- a/measure.html
+++ b/measure.html
@@ -16,6 +16,6 @@
     <div id="startButton">
     <button type="button" onclick="measure()">測定を開始する</button>
     </div>
-    <div id="again"></div>
+    <div id="againOrEnd"></div>
 </body>
 </html>
