--- a/config.html
+++ b/config.html
@@ -11,5 +11,33 @@
     <br>
     <input type="checkbox" id="sound" name="sound" />
     <label for="sound">最低1回は通知する</label>
+    <br>
+
+    <!-- 起床予定時間の設定した時間前におやすみ通知を送る -->
+     おやすみ通知を
+     <input type="radio" name="sleepNotify" checked="checked" value="send" onclick="displayTime()">送る
+    <input type="radio" name="sleepNotify" value="noSend" onclick="hiddenTime()">送らない
+
+    <div id="sleepNotifyTime">
+        <nobr>起床時刻の
+            <form action="#" method="post">
+                <select name="notifyTime">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                    <option value="11">11</option>
+                    <option value="12">12</option>
+                </select>
+            </form>
+        時間前に通知</nobr>
+    </div>
 </body>
 </html>
