ファイル分別

--- a/config.html
+++ b/config.html
@@ -9,8 +9,8 @@
 <body>
     <button type="button" onclick="location.href='./measure.html'">距離測定モード         ></button>
     <br>
-    <input type="checkbox" id="sound" name="sound" />
-    <label for="sound">最低1回は通知する</label>
+    <input type="checkbox" id="firstOnceSound" name="firstOnceSound"/>
+    <label for="firstOnceSound">最低1回は通知する (ON推奨)</label>
     <br>
 
     <!-- 起床予定時間の設定した時間前におやすみ通知を送る -->
