--- a/index.html
+++ b/index.html
@@ -23,6 +23,27 @@
          #sat{
              display: none;
          }
+         #sun1{
+              display: none;
+         }
+         #mon1{
+             display: none;
+         }
+         #tue1{
+             display: none;
+         }
+         #wed1{
+             display: none;
+         }
+         #thu1{
+             display: none;
+         }
+         #fri1{
+             display: none;
+         }
+         #sat1{
+             display: none;
+         }
          
          
      </style>
@@ -340,8 +361,9 @@
     <option value="57">57</option>
     <option value="58">58</option>
     <option value="59">59</option>
-      <a id="tue1text"></a>
     </select>
+    <a id="tue1text"></a>
+
     <br>
     水曜日
     <select id="wed">
