通知処理作成中

--- a/config.html
+++ b/config.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./script/main.js"></script>
+    <script src="./script/config.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
 
     <!-- 起床予定時間の設定した時間前におやすみ通知を送る -->
      おやすみ通知を
-     <input type="radio" name="sleepNotify" checked="checked" value="send" onclick="displayTime()">送る
+    <input type="radio" name="sleepNotify" checked="checked" value="send" onclick="displayTime()">送る
     <input type="radio" name="sleepNotify" value="noSend" onclick="hiddenTime()">送らない
 
     <div id="sleepNotifyTime">
