--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
      </style>
      
     <title>Hello PWA world!</title>
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="script/manifest.json">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script type="text/javascript" src="./script/notify.js"></script>
+    <script src="./script/notify.js"></script>
     <script src="./script/main.js"></script>
 
     <script>
@@ -48,8 +48,8 @@
     <title>PWA</title>
   </head>
   <body>
-    <h1>gitTestHello, PWA world!</h1>
-    <button onclick="notify()">通知を送信</button>
+    <h1>pwa</h1>
+    <button onclick="createNotification()">通知を送信</button>
     
      <div id="button"></div>
      <button type="button" onclick="location.href='./config.html'">設定</button>
