--- a/index.html
+++ b/index.html
@@ -76,7 +76,10 @@
      <button type="button" onclick="location.href='./config.html'">設定</button>
      <br>
      日曜日
+     <input type="checkbox" id="sunbox">
+     
   <select id="sun">
+
     <option value="-">-</option>
     <option value="0">0</option>
     <option value="1">1</option>
@@ -109,6 +112,7 @@
   <select id="sun1">
   <option value="-">-</option>
   <option value="0">0</option>
+  <option value="1">1</option>
   <option value="2">2</option>
   <option value="3">3</option>
   <option value="4">4</option>
@@ -206,6 +210,7 @@
   <select id="mon1">
   <option value="-">-</option>
   <option value="0">0</option>
+  <option value="1">1</option>
   <option value="2">2</option>
   <option value="3">3</option>
   <option value="4">4</option>
