--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <button onclick="createNotification()">通知を送信</button>
     
      <div id="button"></div>
-     <button type="button" onclick="location.href='./config.html'">設定</button>
+     <button type="button" onclick="location.href='./config.html'">設定 test</button>
      <br>
      日曜日
      <input type="checkbox" id="sunbox">
