CSSちょいいじり

--- a/config.html
+++ b/config.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+    <link rel="stylesheet" type="text/css" href="./style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./script/config.js"></script>
@@ -8,10 +9,10 @@
 </head>
 <body>
     <button type="button" onclick="location.href='./measure.html'">距離測定モード         ></button>
-    <br>
+    <br><hr>
     <input type="checkbox" id="firstOnceSound" name="firstOnceSound"/>
     <label for="firstOnceSound">最低1回は通知する (ON推奨)</label>
-    <br>
+    <br><hr>
 
     <!-- 起床予定時間の設定した時間前におやすみ通知を送る -->
      おやすみ通知を
