--- a/config.html
+++ b/config.html
@@ -16,20 +16,21 @@
 
     <!-- 起床予定時間の設定した時間前におやすみ通知を送る -->
      おやすみ通知を
-    <input type="radio" name="sleepNotify" checked="checked" value="send" onclick="displayTime()">送る
-    <input type="radio" name="sleepNotify" value="noSend" onclick="hiddenTime()">送らない
+     <form id="sleepNotify">
+        <input type="radio" name="sleepNotify" checked="checked" value="send" onclick="displayTime()">送る
+        <input type="radio" name="sleepNotify" value="noSend" onclick="hiddenTime()">送らない
+    </form>
 
-    <div id="sleepNotifyTime">
+    <div id="selectList">
         <nobr>起床時刻の
             <form action="#" method="post">
-                <select name="notifyTime">
+                <select name="notifyTime" id="sleepNotifyTime">
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
                     <option value="5">5</option>
                     <option value="6">6</option>
-                    <option value="7">7</option>
                     <option value="7">7</option>
                     <option value="8">8</option>
                     <option value="9">9</option>
