--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     <link rel="stylesheet" type="text/css" href="./style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/nosleep/0.12.0/NoSleep.min.js"></script>
     <script src="./script/notify.js"></script>
     <script src="./script/main.js"></script>
 
@@ -85,6 +86,9 @@
     <div id="header">
       <h1>pwa</h1>
     </div>
+    <script>
+      
+    </script>
     <button onclick="createNotification()">通知を送信</button>
     
      <div id="button"></div>
