--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
       <h1>pwa</h1>
     </div>
     <script>
-      
+      function noSleep(){
+        var data = getNextAlarm();
+        if(data){}
+      }
     </script>
     <button onclick="createNotification()">通知を送信</button>
     
