--- a/index.html
+++ b/index.html
@@ -89,7 +89,12 @@
     <script>
       function noSleep(){
         var data = getNextAlarm();
-        if(data){}
+        var noSleep = new NoSleep();
+        if(data[1] === '--'){
+          noSleep.disabled();
+        }else{
+          noSleep.enabled();
+        }
       }
     </script>
     <button onclick="createNotification()">通知を送信</button>
