--- a/index.html
+++ b/index.html
@@ -101,21 +101,21 @@
      日曜日
      <a id="suntext">--</a>
      <input type="time" id="sun" name="time" class="hidden">
-     <input type="number" min="0" id="sun1" class="hidden">
+     <input type="number" min="0" id="sun1" class="hidden" name="range">
 
       <br>
       <input type="checkbox" id="monbox" name="box" onclick="toggletext('mon')">
       月曜日
       <a id="montext">--</a>
       <input type="time" id="mon" name="time" class="hidden">
-      <input type="number" min="0" id="mon1" class="hidden">
+      <input type="number" min="0" id="mon1" class="hidden" name="range">
 
       <br>
       <input type="checkbox" id="tuebox" name="box" onclick="toggletext('tue')">
       火曜日
       <a id="tuetext">--</a>
       <input type="time" id="tue" name="time" class="hidden">
-      <input type="number" min="0" id="tue1" class="hidden" class="hidden">
+      <input type="number" min="0" id="tue1" class="hidden" class="hidden" name="range">
       <br>
 
       <input type="checkbox" id="wedbox" name="box" onclick="toggletext('wed')">
@@ -123,26 +123,26 @@
       <a id="wedtext">--</a>
 
       <input type="time" id="wed" name="time" class="hidden">
-      <input type="number" min="0" id="wed1" class="hidden">
+      <input type="number" min="0" id="wed1" class="hidden" name="range">
     
       <br>
       <input type="checkbox" id="thubox" name="box" onclick="toggletext('thu')">
       木曜日
       <a id="thutext">--</a>
       <input type="time" id="thu" name="time" class="hidden">
-      <input type="number" min="0" id="tue1" class="hidden">
+      <input type="number" min="0" id="thu1" class="hidden" name="range">
      <br>
      <input type="checkbox" id="fribox" name="box" onclick="toggletext('fri')">
      金曜日
       <a id="fritext">--</a>
       <input type="time" id="fri" name="time" class="hidden">
-      <input type="number" min="0" id="fri1" class="hidden">
+      <input type="number" min="0" id="fri1" class="hidden" name="range">
       <br>
       <input type="checkbox" id="satbox" name="box" onclick="toggletext('sat')">
       土曜日
       <a id="sattext">--</a>
       <input type="time" id="sat" name="time" class="hidden">
-
+      <input type="number" id="sat1" min="0" class="hidden" name="range">
     <button type="button" onclick="test()">test</button>
     </body>
     <script>
