--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       火曜日
       <a id="tuetext">--</a>
       <input type="time" id="tue" name="time" class="hidden">
-      <input type="number" min="0" id="tue1" class="hidden" class="hidden">
+      <input type="number" min="0" id="tue1" class="hidden">
       <br>
 
       <input type="checkbox" id="wedbox" name="box" onclick="toggletext('wed')">
@@ -145,6 +145,7 @@
       土曜日
       <a id="sattext">--</a>
       <input type="time" id="sat" name="time" class="hidden">
+      <input type="number" min="0" id="sat1" class="hidden">
 
     <button type="button" onclick="test()">test</button>
     </body>
