createNotification関数に引数を追加

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         if(data[1] === '--'){
           noSleep.disabled();
         }else{
-          noSleep.enabled();
+          noSleep.enable();
         }
       }
     </script>
