--- a/index.html
+++ b/index.html
@@ -87,15 +87,15 @@
       <h1>pwa</h1>
     </div>
     <script>
-      function noSleep(){
-        var data = getNextAlarm();
-        var noSleep = new NoSleep();
-        if(data[1] === '--'){
-          noSleep.disabled();
-        }else{
-          noSleep.enabled();
-        }
-      }
+      // function noSleep(){
+      //   var data = getNextAlarm();
+      //   var noSleep = new NoSleep();
+      //   if(data[1] === '--'){
+      //     noSleep.disabled();
+      //   }else{
+      //     noSleep.enabled();
+      //   }
+      //}
     </script>
     <button onclick="createNotification()">通知を送信</button>
     
@@ -110,6 +110,7 @@
      <a id="suntext">--</a>
      <input type="time" id="sun" name="time" class="hidden">
      <input type="number" min="0" id="sun1" class="hidden" name="range">
+     <a id="sunrange"></a>
 
       <br>
       <input type="checkbox" id="monbox" name="box" onclick="toggletext('mon')">
@@ -117,14 +118,16 @@
       <a id="montext">--</a>
       <input type="time" id="mon" name="time" class="hidden">
       <input type="number" min="0" id="mon1" class="hidden" name="range">
+      <a id="monrange"></a>
 
       <br>
       <input type="checkbox" id="tuebox" name="box" onclick="toggletext('tue')">
       火曜日
       <a id="tuetext">--</a>
       <input type="time" id="tue" name="time" class="hidden">
-      <input type="number" min="0" id="tue1" class="hidden" class="hidden" name="range">
+      <input type="number" min="0" id="tue1" class="hidden" name="range">
       <br>
+      <a id="tuerange"></a>
 
       <input type="checkbox" id="wedbox" name="box" onclick="toggletext('wed')">
       水曜日
@@ -132,6 +135,7 @@
 
       <input type="time" id="wed" name="time" class="hidden">
       <input type="number" min="0" id="wed1" class="hidden" name="range">
+      <a id="wedrange"></a>
     
       <br>
       <input type="checkbox" id="thubox" name="box" onclick="toggletext('thu')">
@@ -139,18 +143,21 @@
       <a id="thutext">--</a>
       <input type="time" id="thu" name="time" class="hidden">
       <input type="number" min="0" id="thu1" class="hidden" name="range">
+      <a id="thurange"></a>
      <br>
      <input type="checkbox" id="fribox" name="box" onclick="toggletext('fri')">
      金曜日
       <a id="fritext">--</a>
       <input type="time" id="fri" name="time" class="hidden">
       <input type="number" min="0" id="fri1" class="hidden" name="range">
+      <a id="frirange"></a>
       <br>
       <input type="checkbox" id="satbox" name="box" onclick="toggletext('sat')">
       土曜日
       <a id="sattext">--</a>
       <input type="time" id="sat" name="time" class="hidden">
       <input type="number" id="sat1" min="0" class="hidden" name="range">
+      <a id="satrange"></a>
     <button type="button" onclick="test()">test</button>
     </body>
     <script>
