--- a/index.html
+++ b/index.html
@@ -62,13 +62,14 @@
      </style>
      
     <title>Hello PWA world!</title>
-    <link rel="manifest" href="script/manifest.json">
+    <link rel="manifest" href="./script/manifest.json">
     <link rel="stylesheet" type="text/css" href="./style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/nosleep/0.12.0/NoSleep.min.js"></script>
     <script src="./script/notify.js"></script>
     <script src="./script/main.js"></script>
+    <script src="./script/serviceWorker.js"></script>
 
     <script>
       window.addEventListener('load', () => {
