--- a/index.html
+++ b/index.html
@@ -62,20 +62,19 @@
      </style>
      
     <title>Hello PWA world!</title>
-    <link rel="manifest" href="./script/manifest.json">
+    <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" type="text/css" href="./style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/nosleep/0.12.0/NoSleep.min.js"></script>
     <script src="./script/notify.js"></script>
     <script src="./script/main.js"></script>
-    <script src="./script/serviceWorker.js"></script>
 
     <script>
       window.addEventListener('load', () => {
         if ('serviceWorker' in navigator) {
           navigator.serviceWorker
-            .register('./script/serviceWorker.js')
+            .register('serviceWorker.js')
             .then(registration => console.log('registerd', registration))
             .catch(err => console.log('err', err));
         }
@@ -100,7 +99,7 @@
         }
       }
     </script>
-    <button onclick="createNotification()">通知を送信</button>
+    <button type="button" onclick="createNotification()">通知を送信</button>
     
      <div id="button"></div>
      </button>
