--- a/index.html
+++ b/index.html
@@ -67,22 +67,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/nosleep/0.12.0/NoSleep.min.js"></script>
-    <script src="./script/notify.js"></script>
-    <script src="./script/main.js"></script>
 
-    <script>
-      window.addEventListener('load', () => {
-        if ('serviceWorker' in navigator) {
-          navigator.serviceWorker
-            .register('serviceWorker.js')
-            .then(registration => console.log('registerd', registration))
-            .catch(err => console.log('err', err));
-        }
-      });
-    </script>
+
     
   </head>
   <body>
+    <script src="./script/notify.js"></script>
+    <script src="./script/main.js"></script>
+    <script>
+      // window.addEventListener('load', () => {
+      //   if ('serviceWorker' in navigator) {
+      //     navigator.serviceWorker
+      //       .register('serviceWorker.js')
+      //       .then(registration => console.log('registerd', registration))
+      //       .catch(err => console.log('err', err));
+      //   }
+      // });
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('serviceWorker.js').then(function(registration) {
+          console.log('ServiceWorker registration successful with scope: ', registration.scope);
+        }).catch(function(err) {
+          console.log('ServiceWorker registration failed: ', err);
+        });
+      }
+    </script>
     <div id="header">
       <h1>pwa</h1>
     </div>
