--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
      </style>
      
     <title>Hello PWA world!</title>
-    <link rel="manifest" href="script/manifest.json">
+    <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" type="text/css" href="./style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -83,13 +83,15 @@
       //       .catch(err => console.log('err', err));
       //   }
       // });
-      if ('serviceWorker' in navigator) {
+      window.addEventListener('load',() =>{
+        if ('serviceWorker' in navigator) {
         navigator.serviceWorker.register('serviceWorker.js').then(function(registration) {
           console.log('ServiceWorker registration successful with scope: ', registration.scope);
         }).catch(function(err) {
           console.log('ServiceWorker registration failed: ', err);
         });
       }
+      })
     </script>
     <div id="header">
       <h1>pwa</h1>
