--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <script src="./script/notify.js"></script>
-        <link rel="manifest" href="script/manifest.json">
+        <link rel="manifest" href="manifest.json">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
