--- a/test.html
+++ b/test.html
@@ -14,7 +14,18 @@
       <button type="button" onclick="print()">表示</button>
       <button type="button" onclick="dainyu()">代入</button>
       <button type="button" onclick="check()">チェック</button>
+      <button type="button" onclick="hiddenText()">隠す</button>
+      <button type="button" onclick="displayText()">表示</button>
+      <div  class="hidden">text</div>
+      <input type="time" id="thuTime" name="time" class="hidden">
+      <input type="number" id="aaa" name="range" min="0" class="hidden">
       <script>
+        function hiddenText(){
+          document.getElementById('text').style.display = "none";
+        }
+        function displayText(){
+          document.getElementById('text').style.display = "block";
+        }
         function check(){
           document.getElementById('box').checked = true;
         }
