--- a/index.html
+++ b/index.html
@@ -139,6 +139,8 @@
       <option value="70">70</option>
       <option value="75">75</option>
       <option value="80">80</option>
+      <option value="85">85</option>
+      <option value="90">90</option>
       <option value="95">95</option>
       <option value="100">100</option>
       <option value="105">105</option>
@@ -170,6 +172,8 @@
       <option value="70">70</option>
       <option value="75">75</option>
       <option value="80">80</option>
+      <option value="85">85</option>
+      <option value="90">90</option>
       <option value="95">95</option>
       <option value="100">100</option>
       <option value="105">105</option>
@@ -201,6 +205,8 @@
       <option value="70">70</option>
       <option value="75">75</option>
       <option value="80">80</option>
+      <option value="85">85</option>
+      <option value="90">90</option>
       <option value="95">95</option>
       <option value="100">100</option>
       <option value="105">105</option>
@@ -232,6 +238,8 @@
       <option value="70">70</option>
       <option value="75">75</option>
       <option value="80">80</option>
+      <option value="85">85</option>
+      <option value="90">90</option>
       <option value="95">95</option>
       <option value="100">100</option>
       <option value="105">105</option>
@@ -263,6 +271,8 @@
       <option value="70">70</option>
       <option value="75">75</option>
       <option value="80">80</option>
+      <option value="85">85</option>
+      <option value="90">90</option>
       <option value="95">95</option>
       <option value="100">100</option>
       <option value="105">105</option>
@@ -294,6 +304,8 @@
       <option value="70">70</option>
       <option value="75">75</option>
       <option value="80">80</option>
+      <option value="85">85</option>
+      <option value="90">90</option>
       <option value="95">95</option>
       <option value="100">100</option>
       <option value="105">105</option>
@@ -325,6 +337,8 @@
       <option value="70">70</option>
       <option value="75">75</option>
       <option value="80">80</option>
+      <option value="85">85</option>
+      <option value="90">90</option>
       <option value="95">95</option>
       <option value="100">100</option>
       <option value="105">105</option>
