--- a/config.html
+++ b/config.html
@@ -8,11 +8,9 @@
     <title>Document</title>
 </head>
 <body>
+    <button type="button" onclick="location.href='./index.html'">戻る</button>
     <button type="button" onclick="location.href='./measure.html'">距離測定モード         ></button>
-    <br><hr>
-    <input type="checkbox" id="firstOnceSound" name="firstOnceSound"/>
-    <label for="firstOnceSound">最低1回は通知する (ON推奨)</label>
-    <br><hr>
+    <br>
 
     <!-- 起床予定時間の設定した時間前におやすみ通知を送る -->
      おやすみ通知を
