--- a/measure.html
+++ b/measure.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <button type="button" onclick="location.href='./config.html'">戻る</button>
     <div id="message"></div>
     <div id="text">
         センサーを地面と水平にして、寝具の横に設置してください。<br>
